Added endpoint for partner block; added translations; openapi.yaml file was updated
